--- a/style.css
+++ b/style.css
@@ -18,14 +18,21 @@
 
 
   .brand__h1 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 37px;
+    font-weight: 700px;
+    margin-left: 20px;
   }
   
   .menu {
+    
     display: flex;
     padding: 0;
+    justify-content: space-between;
+    margin-left: 500px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
   }
   .menu__item {
     list-style: none;
@@ -132,9 +139,13 @@
   }
   
   .nuestro__title-1--bienvenido {
+
     padding: 0;
     margin: 0;
+    font-family: cursive;
     margin: 40px 40px 40px 40px;
+
+    
     
   }
   .nuestro__title-2--bienvenido {
